# ES_PCS_26

./: file_esempio.txt
esercitazione1/: CMakeLists.txt  esercitazione1.cpp  printargs.cpp
esercitazione10/: CMakeLists.txt  gradiente_coniugato.hpp  main.cpp
esercitazione2/: CMakeLists.txt  es1.cpp  es2.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt  insertion_sort.hpp  is_sorted.hpp  measure_sorts.cpp  test_bubblesort.cpp
esercitazione5/: CMakeLists.txt  bubble_sort.hpp  insertion_sort.hpp  merge_sort.hpp  osservazioni.txt  quick_sort.hpp  selection_sort.hpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp  time_sorts.cpp
esercitazione8/: CMakeLists.txt  main.cpp  unidirected_graph.hpp
esercitazione9/: CMakeLists.txt  container_FIFO.hpp  container_LIFO.hpp  dijkstra.hpp  graph_visit.hpp  main.cpp  recursive_dfs.hpp  unidirected_edge.hpp  unidirected_graph.hpp
